# book

./: .gitignore
.github/workflows/: deploy.yaml
.specify/memory/: constitution.md
backend/: pyproject.toml  test_qdrant.py
backend/src/: agents.py
backend/src/agent/: config.py  exceptions.py  main.py
backend/src/agent/api/: retrieval_endpoints.py
backend/src/agent/models/: query_models.py
backend/src/agent/services/: qdrant_service.py  retrieval_agent.py
backend/src/ingestion/: __init__.py  chunker.py  config.py  embedder.py  errors.py  logging.py  main.py  models.py  reader.py  uploader.py  utils.py
backend/tests/unit/: test_config.py
frontend/: docusaurus.config.ts  package-lock.json  package.json  tsconfig.json
frontend/docs/: intro.md
frontend/docs/module1/: chapter1.md  chapter2.md  chapter3.md  chapter4.md
frontend/docs/module2/: chapter5.md  chapter6.md  chapter7.md  chapter8.md
frontend/docs/module3/: _category_.json  chapter10.md  chapter11.md  (+4 more)
frontend/src/: react-app-env.d.ts
specs/001-chatbot-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-frontend-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-qdrant-retrieval-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ai-text-selection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-physical-ai-robotics-book/: plan.md  spec.md  tasks.md
(+83 files in other folders)
